# poker

./: .clang-format  .gitignore  CMakeLists.txt  Config.cmake.in  Jenkinsfile
3rd/moodycamel/: CMakeLists.txt
cmake/: directory.cmake  main.cmake  poker_add_library.cmake
cmake/details/: poker_parse_arguments.cmake
cmake/project/: poker_find_packages.cmake  poker_finish_project.cmake  poker_project.cmake
cmake/script/: generate_protobuf_package.bash
cmake/template/: package_config.cmake  project_config.cmake  protobuf_target_CMakeLists.txt  top_package_config.cmake
concurrency/: CMakeLists.txt
concurrency/container/: CMakeLists.txt
concurrency/container/list/: CMakeLists.txt
concurrency/container/map/: CMakeLists.txt
concurrency/container/queue/: CMakeLists.txt
concurrency/container/stack/: CMakeLists.txt
scripts/: TODO.md  poker_format  poker_launch
scripts/experimentals/: directory.bash
scripts/format/: format.bash
scripts/string/: string.bash
scripts/terminator/: config_global_config.template  config_profile.template  launch.bash  layout.bash
scripts/test/: ares_test_task.yml  task.yml  test.cpp  test.h
scripts/utils/: utils.bash
scripts/var/: format.bash  path.bash  poker_var.bash
src/chrono/: CMakeLists.txt
src/chrono/include/poker/: chrono.h
src/chrono/src/chrono/: chrono.cpp
src/container/: CMakeLists.txt  tool.h
src/databus/: CMakeLists.txt
src/databus/backend/: CMakeLists.txt
src/databus/backend/http/: CMakeLists.txt
src/databus/backend/null/: CMakeLists.txt
src/databus/databus/: CMakeLists.txt
src/databus/http/: CMakeLists.txt
src/databus/mqtt/: CMakeLists.txt
src/databus/serialization/: CMakeLists.txt
src/databus/test/: CMakeLists.txt
src/databus/test/include/: channel.h
src/databus/tests/: CMakeLists.txt
src/databus/tests/include/: channel.h
src/databus/this_process/: CMakeLists.txt
src/macro/: CMakeLists.txt
src/macro/include/poker/: macro.h
src/macro/test/: main.cpp
src/param/: CMakeLists.txt
src/param/param/: CMakeLists.txt
src/param/param_backend_yaml/: CMakeLists.txt
src/pattern/: CMakeLists.txt
src/pattern/test/: main.cpp
src/reflect/: CMakeLists.txt
src/system/: CMakeLists.txt
src/system/auto_start/: CMakeLists.txt
src/system/auto_start/include/poker/: AutoComponent.h
src/system/auto_start/src/system-auto_start/: AutoComponent.cpp
src/system/core/: CMakeLists.txt
src/system/core/include/poker/: core.h
src/system/core/src/core/: core.cpp
src/system/core/test/: main.cpp
src/system/core/test/core-LAUNCH/: main.cpp
src/system/core/test/core-PROCESS/: main.cpp
src/system/launch_center/: CMakeLists.txt
src/system/launch_center/include/poker/system/: launch_center.h
src/system/launch_center/include/poker/system/interface/: IComponent.h
src/system/launch_center/src/system-launch_center/: launch_center.cpp
src/system/launch_center/test/: main.cpp
src/system/launch_center/test/system-launch_center/: main.cpp
src/test/global/: global_initialization.cpp
src/test/type_traits/: CMakeLists.txt  fake_enable-if.cpp
src/thread/: CMakeLists.txt
src/thread/condition/: CMakeLists.txt
src/thread/lock/: CMakeLists.txt
src/thread/lock/hierarchical/: CMakeLists.txt
src/thread/lock/hierarchical/include/poker/thread/: hierarchical_mutex.h
src/thread/lock/hierarchical/src/thread-lock-hierarchical/: hierarchical_mutex.cpp
src/thread/loop/: CMakeLists.txt
src/thread/manage/: CMakeLists.txt
src/thread/manage/include/: manage.h
src/thread/manage/src/thread-manage/: manage.cpp
src/thread/manage/test/: main.cpp
src/thread/pool/: CMakeLists.txt
src/type_traits/: CMakeLists.txt
src/unit/: CMakeLists.txt
src/unit/src/unit/: Angle.cpp  (+5 more)
test/: CMakeLists.txt
test/cmake/: CMakeLists.txt
test/cmake/dynamic_link_dynamic/: CMakeLists.txt
test/cmake/foreach/: CMakeLists.txt
test/cmake/function_position/: CMakeLists.txt
test/cmake/scope/: CMakeLists.txt
test/cmake/shared_link_static/: CMakeLists.txt  dynamic_api.h  dynamic_impl.cpp  static_impl.cpp
test/cmake/static_dynamic-target_link/: CMakeLists.txt
test/cmake/static_dynamic-target_link/src/: dep_impl.cpp  impl.cpp
test/cmake/static_link_dynamic/: CMakeLists.txt  dynamic_impl.cpp  static_api.h  static_impl.cpp
test/cmake/static_link_static/: CMakeLists.txt
test/cmake/target_link_libraries-private/: CMakeLists.txt  lib.cpp  lib.h  libdep.cpp  libdep.h  main.cpp
test/global/: CMakeLists.txt
test/global/object_with_same_name/: CMakeLists.txt  Object.h  main.cpp  var_a.cpp
test/implict_to_string/: implict_to_string.cpp
test/object/: CMakeLists.txt
test/object/size_of_object/: CMakeLists.txt  main.cpp
test/object/static_call_constructor/: main.cpp  static_call_constructer.h
test/rvalue_reference/: CMakeLists.txt  as_return_value.cpp
test/specialize_class_template/: func.cpp  header.h
test/specialize_function_template/: header.cpp  header.h
test/specialize_tempate_from_net/: CMakeLists.txt  main.cpp
test/template/: CMakeLists.txt
test/template/call_specialization_in_primary_template/: CMakeLists.txt  interface.h  readme.md  solver3.cpp  test.h
test/template/specialize_class_template/: main.cpp
test/template/specialize_function_template/: func.cpp
test/template/specialize_tempate_from_net/: CMakeLists.txt  hello.h  other.cpp
test/template/variable_template/: header.h
test/thread/: CMakeLists.txt
test/thread/condition/: CMakeLists.txt  base.cpp
test/thread/lock/: CMakeLists.txt  locking_strategy.cpp
test/thread/utils/: hardware_concurrency.cpp
test/type_traits/: fake_enable-if.cpp
test/variable_template/: CMakeLists.txt  main.cpp
thread/: CMakeLists.txt
thread/container/: CMakeLists.txt
thread/container/queue/: CMakeLists.txt
thread/lock/: CMakeLists.txt
thread/lock/hierarchical/: CMakeLists.txt
thread/lock/hierarchical/include/: hierarchical_mutex.h
thread/lock/hierarchical/src/: hierarchical_mutex.cpp
thread/manage/: CMakeLists.txt
thread/manage/include/: manage.h
thread/manage/src/: manage.cpp
thread/manage/test/: main.cpp
(+195 files in other folders)
